Doc: Make fixed-width inline text more readable

--- a/doc/virtualgl.css
+++ b/doc/virtualgl.css
@@ -38,6 +38,20 @@ pre
 	margin-right: 25px;
 }
 
+code
+{
+	color: rgb(0, 0, 204);
+	font-family: courier,monospace;
+	font-size: 14px;
+}
+
+td.high code
+{
+	color: rgb(255, 255, 255);
+	font-family: courier,monospace;
+	font-size: 14px;
+}
+
 tr
 {
 	background-color: rgb(238, 238, 255);
